dataset1235/2025-2/805158916/users/2550781990/executions/71079933_146336312.log
== RUN (2025-08-11 15:35:02)
-- CODE: 
print(50//3%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:53)
-- CODE: 
print(50//3)
print(%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:37:13)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:47)
-- CODE: 
print(50//3)
print(5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
5
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:34:01)
-- CODE: 
print(50//3%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:51)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:40)
-- CODE: 
print(50//3
     %)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    %)
     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    %)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 13:47:03)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:35:24)
-- CODE: 
print(50//3 %)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3 %)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3 %)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:35:29)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:36)
-- CODE: 
print(50//3)
print(16%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(16%)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(16%)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:35:08)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:15)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:47:02)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:08)
-- CODE: 
print(50//3,%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3,%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3,%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:46:59)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:34:16)
-- CODE: 
print(50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
